enhance shop layout, solve overflow issue, fix header z-index on encap page

--- a/css/encapsulation.css
+++ b/css/encapsulation.css
@@ -131,9 +131,10 @@ nav {
   overflow: hidden;
   pointer-events: none;
   transition: all 1.8s ease-out;
+
 }
 
-ul {
+nav ul {
   display: flex;
 
   list-style: none;
@@ -141,14 +142,13 @@ ul {
   width: max-content;
 }
 
-a {
-  padding: 6px 12px;
-  text-decoration: none;
-}
-
 #header-logo {
   animation: rgb-pulse 2.2s linear infinite alternate, game-float 5s linear infinite alternate;
+  padding: 6px 12px;
   height: 8rem;
+
+  position: relative;
+  z-index: 2;
 }
 
 #header-logo:hover {
@@ -165,7 +165,6 @@ a {
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
-  /* gap: 333px; */
 }
 
 #menu-btn {
@@ -178,6 +177,8 @@ a {
   padding: 5px;
   width: 55px;
   transition: 0.5s all ease-in;
+
+  z-index: 2;
 }
 
 #menu-btn:hover {
@@ -187,19 +188,19 @@ a {
 #menu-btn-san {
   display: flex;
   justify-content: center;
-  
+
   background: hsl(52, 100%, 95%);
   border-radius: 8px;
   box-shadow: 0 0 8px 2px #fffce8;
   height: 3px;
   width: 20px;
-  
+
   transition: all .3s ease-in-out;
 }
 
 #menu-btn-san::before {
   content: '';
-  
+
   background: hsl(52, 100%, 95%);
   border-radius: 3px;
   box-shadow: 0 0 8px 2px #fffce8;
@@ -213,7 +214,7 @@ a {
 
 #menu-btn-san::after {
   content: '';
-  
+
   background: hsl(52, 100%, 95%);
   border-radius: 3px;
   box-shadow: 0 0 8px 2px #fffce8;
@@ -231,7 +232,6 @@ a {
   box-shadow: none;
   transition: all 1.8s ease-out;
   transform: rotate(-360deg);
-  
 }
 
 #menu-btn.open #menu-btn-san::before {
@@ -239,7 +239,7 @@ a {
   opacity: 0.8;
   transform: rotate(405deg);
   transition: all 1.8s ease-out;
-  width: 33px; 
+  width: 33px;
 }
 
 #menu-btn.open #menu-btn-san::after {
@@ -248,9 +248,9 @@ a {
   transform: rotate(-405deg);
   transition: all 1.8s ease-out;
   width: 33px;
-} 
+}
 
-#menu-btn.open ~ nav {
+#menu-btn.open~nav {
   margin-right: 655px;
   opacity: 1;
   overflow: visible;
@@ -372,7 +372,7 @@ a {
   position: relative;
 
   font-size: 1.8rem;
-  
+
   border-radius: 0.3em;
   padding: 0.3em 0.8em;
   text-decoration: none;
@@ -382,30 +382,17 @@ a {
 
 .nav-link::before {
   content: '';
-  
+
   position: absolute;
-  top: 3rem;
+  top: 30px;
   right: 0;
-  
+
   filter: blur(0.6em);
   height: 100%;
   opacity: 0.2;
   pointer-events: none;
   transform: perspective(0.2em) rotateX(10deg) scale(1, 0.8);
   width: 100%;
-}
-
-.nav-link::after {
-  content: '';
-
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-
-  transition: background-color 333ms linear;
 }
 
 .nav-link:hover,
@@ -417,22 +404,12 @@ a {
   outline: none;
 }
 
-.nav-link:hover::before, 
+.nav-link:hover::before,
 .nav-link:focus::before {
   opacity: 1;
 }
 
-.nav-link:hover::after, 
-.nav-link:focus::after {
-  opacity: 1;      
-}
 
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
 /* 
   ┌──────────────────────────────────────────────────────────────────────┐
@@ -491,6 +468,13 @@ main {
       transform: scale(1.1);
       text-shadow: 0 0 8px black;
   }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #table_container {
