--- a/css/shop.css
+++ b/css/shop.css
@@ -174,6 +174,7 @@ body {
   font-family: 'PixeBoy', 'GoshaSansRegular', 'Roboto Mono', 'Courier New', Courier, monospace;
   font-size: 1.8rem;
   margin: 0;
+  overflow-x: hidden;
   min-height: 100vh;
 }
 
@@ -199,7 +200,7 @@ body {
   min-height: 100%;
   
   background-image: url('../imgs/logos/theWonderKid.png');
-  background-position: 50% 0;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -551,33 +552,38 @@ main {
   align-items: center;
   justify-content: center;
   
+  width: 33vw;
+  height: 333px;
   margin-bottom: 8vh;
-  width: 55vw;
-
-  transition: all 0.5s ease-out;
-
+  
+  transition: all 0.38s ease-out;
+  
   /* border: 1px solid red; */
 }
 
 .item-container:hover {
   margin-bottom: 222px;
+  width: 77vw;
 }
 
 .item-container:nth-of-type(odd) {
   flex-direction: row-reverse;
+
+  margin-right: 25vw;
 }
 
 .item-container:nth-of-type(odd):hover {
-  margin-right: 222px;
+  margin-right: 17.5vw
 }
 
 .item-container:nth-of-type(even) {
   flex-direction: row;  
-  /* default */
+
+  margin-right: -25vw;
 }
 
 .item-container:nth-of-type(even):hover {
-  margin-right: -222px;
+  margin-right: -17.5vw;
 }
 
 .item-container:nth-of-type(odd):hover > .item-description > .item-description-card {
@@ -606,14 +612,14 @@ main {
 .item-container:nth-of-type(1):hover > .item-description > .item-description-card,
 .item-container:nth-of-type(2):hover > .item-description > .item-description-card,
 .item-container:nth-of-type(3):hover > .item-description > .item-description-card {
-  top: 70px;
+  top: 75px;
 }
 /* beanieCardTopPositioning gameOver */
 
 /* hoodieCardTopPositioning pressStart */
 .item-container:nth-of-type(4):hover > .item-description > .item-description-card,
 .item-container:nth-of-type(5):hover > .item-description > .item-description-card {
-  top: 100px;
+  top: 105px;
 }
 /* hoodieCardTopPositioning gameOver */
 
@@ -621,13 +627,13 @@ main {
 .item-container:nth-of-type(6):hover > .item-description > .item-description-card,
 .item-container:nth-of-type(7):hover > .item-description > .item-description-card,
 .item-container:nth-of-type(8):hover > .item-description > .item-description-card {
-  top: 100px;
+  top: 105px;
 }
 /* socksCardTopPositioning gameOver */
 
 /* keychainCardTopPositioning pressStart */
 .item-container:nth-of-type(9):hover > .item-description > .item-description-card {
-  top: 67px;
+  top: 72px;
 }
 /* keychainCardTopPositioning gameOver */
 
@@ -638,11 +644,11 @@ main {
 /* shovelCardTopPositioning gameOver */
 
 .item-container:hover:nth-of-type(even) > .item > img {
-  transform: rotate(13deg) scale(1.2); 
+  transform: rotate(13deg) scale(1.15); 
 }
 
 .item-container:hover:nth-of-type(odd) > .item > img {
-  transform: rotate(-13deg) scale(1.2); 
+  transform: rotate(-13deg) scale(1.15); 
 }
 
 /* .item-container:nth-of-type(even) > .item-description {
@@ -697,6 +703,7 @@ main {
   color: rgb(188, 189, 190) ;
   font-size: 3rem;
   margin: 0;
+  min-width: max-content;
   text-shadow: 0 0 0.5em rgb(255, 255, 255);
 
   filter: drop-shadow(0 0 8px black);
@@ -712,6 +719,7 @@ main {
   font-size: 2.2rem;
   font-weight: bold;
   margin: 0;
+  min-width: max-content;
   padding: 5px 50px;
   text-shadow: 0 0 0.5em var(--neon-green);
 }
@@ -1363,13 +1371,13 @@ footer p {
   .item-container:nth-of-type(odd), 
   .item-container:nth-of-type(even) {
     flex-direction: column;
-    margin-bottom: 100px;
+    height: max-content;
+    margin: 0 0 150px 0;
   }
 
   .item-container:nth-of-type(odd):hover,
   .item-container:nth-of-type(even):hover {
-    margin-right: 0;
-    margin-bottom: 375px;
+    margin: 0 0 375px 0;
   }
 
   /* stopsRotation */
